@@ -1,5 +1,6 @@
 ver 0.23.1 (not yet released)
 * fix libfmt linker problems
+* fix broken password authentication
 
 ver 0.23 (2021/10/14)
 * protocol
